[package]
name = "zenoh-ros-type"
version = "0.3.3"
authors = ["ChenYing Kuo <evshary@gmail.com>", "Au-Zone Technologies <info@au-zone.com>"]
description = "Common Rust struct for ROS 2 messages used by Zenoh"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MaivinAI/zenoh-ros-type"
repository = "https://github.com/MaivinAI/zenoh-ros-type"
documentation = "https://docs.rs/zenoh-ros-type/"

[dependencies]
serde = "1.0.147"
serde_derive = "1.0.147"
